force-app/main/default/objects/List_Views_Manager__mdt/List_Views_Manager__mdt.object-meta.xml
<CustomObject>
    <label>List Views Manager</label>
    <pluralLabel>List Views Managers</pluralLabel>
</CustomObject>