force-app/main/default/objects/List_Views_Manager__mdt/fields/Columns_Fields__c.field-meta.xml
<CustomField>
    <fullName>Columns_Fields__c</fullName>
    <label>Columns Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>