force-app/main/default/objects/List_Views_Manager__mdt/fields/Filter_Criteria_JSON__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria_JSON__c</fullName>
    <label>Filter Criteria JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>